--- a/src/main/webapp/WEB-INF/jsp/_parts/customer/navbar.jspf
+++ b/src/main/webapp/WEB-INF/jsp/_parts/customer/navbar.jspf
@@ -4,7 +4,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
   <div class="container">
-    <a class="navbar-brand" href="<c:url value='/secretary/home'/>">BackDesk</a>
+    <a class="navbar-brand" href="<c:url value='/customer/home'/>">BackDesk</a>
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMain">
       <span class="navbar-toggler-icon"></span>
@@ -18,7 +18,7 @@
       </ul>
 
       <div class="d-flex">
-        <a class="btn btn-outline-danger btn-sm" href="<c:url value='/secretary/logout'/>">ログアウト</a>
+        <a class="btn btn-outline-danger btn-sm" href="<c:url value='/customer/logout'/>">ログアウト</a>
       </div>
     </div>
   </div>
