--- a/src/main/webapp/WEB-INF/jsp/_parts/admin/navbar.jspf
+++ b/src/main/webapp/WEB-INF/jsp/_parts/admin/navbar.jspf
@@ -1,4 +1,5 @@
 <%@ taglib prefix="c" uri="jakarta.tags.core" %>
+
 <%@ page language="java" contentType="text/html; charset=UTF-8"
 	pageEncoding="UTF-8"%>
 
@@ -18,7 +19,8 @@
         <li class="nav-item"><a class="nav-link" href="<c:url value='/admin/mypage'/>">ID管理</a></li>
         <li class="nav-item"><a class="nav-link" href="<c:url value='/admin/assignment'/>">アサイン管理</a></li>
         <li class="nav-item"><a class="nav-link" href="<c:url value='/admin/task/list_all'/>">タスク管理</a></li>
-        <li class="nav-item"><a class="nav-link" href="<c:url value='/admin/invoice'/>">請求管理</a></li>
+        <li class="nav-item"><a class="nav-link" href="<c:url value='/admin/invoice/sales'/>">請求管理</a></li>
+        <li class="nav-item"><a class="nav-link" href="<c:url value='/admin/invoice/costs'/>">支出管理</a></li>
         <li class="nav-item"><a class="nav-link" href="<c:url value='/admin/summary/sales'/>">売上サマリー</a></li>
         <li class="nav-item"><a class="nav-link" href="<c:url value='/admin/summary/costs'/>">費用サマリー</a></li>
       </ul>
