--- a/src/main/webapp/WEB-INF/jsp/_parts/secretary/navbar.jspf
+++ b/src/main/webapp/WEB-INF/jsp/_parts/secretary/navbar.jspf
@@ -14,7 +14,7 @@
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item"><a class="nav-link" href="<c:url value='/secretary/home'/>">ホーム</a></li>
         <li class="nav-item"><a class="nav-link" href="<c:url value='/secretary/profile'/>">プロフィール管理</a></li>
-        <li class="nav-item"><a class="nav-link" href="<c:url value='/secretary/mypage'/>">ID管理</a></li>
+        <li class="nav-item"><a class="nav-link" href="<c:url value='/secretary/mypage/home'/>">ID管理</a></li>
         <li class="nav-item"><a class="nav-link" href="<c:url value='/secretary/task/list_all'/>">タスク管理</a></li>
         <li class="nav-item"><a class="nav-link" href="<c:url value='/secretary/task/register'/>">タスク登録</a></li>
         <li class="nav-item"><a class="nav-link" href="<c:url value='/secretary/invoice'/>">請求管理</a></li>
