--- a/src/main/webapp/WEB-INF/jsp/_parts/admin/navbar.jspf
+++ b/src/main/webapp/WEB-INF/jsp/_parts/admin/navbar.jspf
@@ -1,33 +1,59 @@
-<%@ taglib prefix="c" uri="jakarta.tags.core" %>
+<%@ taglib prefix="c" uri="jakarta.tags.core"%>
 
 <%@ page language="java" contentType="text/html; charset=UTF-8"
 	pageEncoding="UTF-8"%>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
-  <div class="container">
-    <a class="navbar-brand" href="<c:url value='/admin/home'/>">BackDesk</a>
+	<div class="container">
+		<a class="navbar-brand" href="<c:url value='/admin/home'/>">BackDesk</a>
 
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMain">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+		<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+			data-bs-target="#navMain">
+			<span class="navbar-toggler-icon"></span>
+		</button>
 
-    <div class="collapse navbar-collapse" id="navMain">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item"><a class="nav-link" href="<c:url value='/admin/home'/>">ホーム</a></li>
-        <li class="nav-item"><a class="nav-link" href="<c:url value='/admin/secretary'/>">秘書管理</a></li>
-        <li class="nav-item"><a class="nav-link" href="<c:url value='/admin/customer'/>">顧客管理</a></li>
-        <li class="nav-item"><a class="nav-link" href="<c:url value='/admin/mypage'/>">ID管理</a></li>
-        <li class="nav-item"><a class="nav-link" href="<c:url value='/admin/assignment'/>">アサイン管理</a></li>
-        <li class="nav-item"><a class="nav-link" href="<c:url value='/admin/task/list_all'/>">タスク管理</a></li>
-        <li class="nav-item"><a class="nav-link" href="<c:url value='/admin/invoice/sales'/>">請求管理</a></li>
-        <li class="nav-item"><a class="nav-link" href="<c:url value='/admin/invoice/costs'/>">支出管理</a></li>
-        <li class="nav-item"><a class="nav-link" href="<c:url value='/admin/summary/sales'/>">売上サマリー</a></li>
-        <li class="nav-item"><a class="nav-link" href="<c:url value='/admin/summary/costs'/>">費用サマリー</a></li>
-      </ul>
+		<div class="collapse navbar-collapse" id="navMain">
+			<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+				<li class="nav-item"><a class="nav-link"
+					href="<c:url value='/admin/home'/>">ホーム</a></li>
+				<li class="nav-item"><a class="nav-link"
+					href="<c:url value='/admin/secretary'/>">秘書管理</a></li>
+				<li class="nav-item"><a class="nav-link"
+					href="<c:url value='/admin/customer'/>">顧客管理</a></li>
+				<li class="nav-item"><a class="nav-link"
+					href="<c:url value='/admin/mypage'/>">ID管理</a></li>
+				<li class="nav-item"><a class="nav-link"
+					href="<c:url value='/admin/assignment'/>">アサイン管理</a></li>
+				<li class="nav-item"><a class="nav-link"
+					href="<c:url value='/admin/task/list_all'/>">タスク管理</a></li>
+				<li class="nav-item dropdown"><a
+					class="nav-link dropdown-toggle" href="#" id="costsDropdown"
+					role="button" data-bs-toggle="dropdown" aria-expanded="false">
+						コスト管理 </a>
+					<ul class="dropdown-menu" aria-labelledby="costsDropdown">
+						<li><a class="dropdown-item"
+							href="<c:url value='/admin/invoice/sales'/>">請求管理</a></li>
+						<li><a class="dropdown-item"
+							href="<c:url value='/admin/invoice/costs'/>">支出管理</a></li>
+					</ul></li>
+				<li class="nav-item dropdown"><a
+					class="nav-link dropdown-toggle" href="#" id="analysisMenu"
+					role="button" data-bs-toggle="dropdown" aria-expanded="false">
+						売上費用分析 </a>
+					<ul class="dropdown-menu" aria-labelledby="analysisMenu">
+						<li><a class="dropdown-item"
+							href="<c:url value='/admin/summary/sales'/>">売上サマリー</a></li>
+						<li><a class="dropdown-item"
+							href="<c:url value='/admin/summary/costs'/>">費用サマリー</a></li>
+					</ul></li>
+				<li class="nav-item"><a class="nav-link"
+					href="<c:url value='/admin/task/alert'/>">アラート一覧</a></li>
+			</ul>
 
-      <div class="d-flex">
-        <a class="btn btn-outline-danger btn-sm" href="<c:url value='/admin/logout'/>">ログアウト</a>
-      </div>
-    </div>
-  </div>
+			<div class="d-flex">
+				<a class="btn btn-outline-danger btn-sm"
+					href="<c:url value='/admin/logout'/>">ログアウト</a>
+			</div>
+		</div>
+	</div>
 </nav>
