--- a/src/main/webapp/WEB-INF/jsp/_parts/customer/navbar.jspf
+++ b/src/main/webapp/WEB-INF/jsp/_parts/customer/navbar.jspf
@@ -13,7 +13,7 @@
     <div class="collapse navbar-collapse" id="navMain">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item"><a class="nav-link" href="<c:url value='/customer/home'/>">ホーム</a></li>
-        <li class="nav-item"><a class="nav-link" href="<c:url value='/customer/mypage/home'/>">ID管理</a></li>
+        <li class="nav-item"><a class="nav-link" href="<c:url value='/customer/mypage/home'/>">マイページ</a></li>
         <li class="nav-item"><a class="nav-link" href="<c:url value='/customer/invoice'/>">支払管理</a></li>
         <li class="nav-item"><a class="nav-link" href="<c:url value='/customer/task/list'/>">タスク管理</a></li>
         <li class="nav-item"><a class="nav-link" href="<c:url value='/customer/assignment/list'/>">委託先一覧</a></li>
